--- a/site/css/custom.css
+++ b/site/css/custom.css
@@ -47,7 +47,7 @@
   --md-typeset-a-color: #d3d3d3;
   --md-footer-fg-color: #fff;
   --md-footer-bg-color: #0d0d0d;
-  --md-footer-bg-color--dark: #0d0d0d;
+  --md-footer-bg-color--dark: #3a3a3a;
   --md-footer-fg-color--light: #fff;
   --md-footer-fg-color--lighter: #fff;
   --md-code-bg-color: #1d1d1d;
