--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -1,5 +1,5 @@
 :root {
-  --md-text-font: "JetBrains Mono", "JetBrains Mono"; 
+  --md-text-font: "LXGW WenKai Screen","LXGW WenKai Screen"; 
 }
 
 .md-typeset h1, .md-typeset h2 {
